[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Styles/Purple.EditorTheme.tres" type="Theme" id=1]
[ext_resource path="res://Assets/Branding/EoI_Class_Cover.png" type="Texture" id=2]
[ext_resource path="res://EoI/Scripts/EoI_Viewer.gd" type="Script" id=4]
[ext_resource path="res://Assets/Styles/Wine.EditorTheme.tres" type="Theme" id=5]

[node name="EoI_Panel" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 5 )
script = ExtResource( 4 )

[node name="CourseBrand" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="Letter_FDialog" type="FileDialog" parent="."]
anchor_left = 0.35
anchor_top = 0.15
anchor_right = 0.45
anchor_bottom = 0.25
margin_right = 356.0
margin_bottom = 373.0
theme = ExtResource( 1 )
popup_exclusive = true
window_title = "Open a File"
mode = 0
access = 2

[node name="VBox" type="VBoxContainer" parent="."]
anchor_top = 0.196
anchor_right = 0.2
anchor_bottom = 1.0
margin_top = 2.39999
margin_right = -1.8
margin_bottom = -2.0

[node name="Eva_Interpret_Btn" type="Button" parent="VBox"]
margin_right = 203.0
margin_bottom = 30.0
rect_pivot_offset = Vector2( -123, -302 )
size_flags_vertical = 3
size_flags_stretch_ratio = 0.08
theme = ExtResource( 1 )
text = "Eva: Interpret"

[node name="ClearOutput_Btn" type="Button" parent="VBox"]
margin_top = 34.0
margin_right = 203.0
margin_bottom = 64.0
rect_pivot_offset = Vector2( -123, -302 )
size_flags_vertical = 3
size_flags_stretch_ratio = 0.08
theme = ExtResource( 1 )
text = "Clear Output"

[node name="Separator" type="HSeparator" parent="VBox"]
modulate = Color( 0.145098, 0.145098, 0.164706, 0 )
margin_top = 68.0
margin_right = 203.0
margin_bottom = 443.0
size_flags_vertical = 15
theme = ExtResource( 5 )

[node name="Back_Btn" type="Button" parent="VBox"]
margin_top = 447.0
margin_right = 203.0
margin_bottom = 478.0
rect_pivot_offset = Vector2( -123, -302 )
size_flags_vertical = 3
size_flags_stretch_ratio = 0.08
theme = ExtResource( 1 )
text = "Course Directory"

[node name="Editor_TEdit" type="TextEdit" parent="."]
anchor_left = 0.2
anchor_right = 0.625
anchor_bottom = 0.8
theme = ExtResource( 5 )
show_line_numbers = true
draw_tabs = true
highlight_all_occurrences = true
smooth_scrolling = true
minimap_draw = true

[node name="Output_TEdit" type="TextEdit" parent="."]
anchor_left = 0.2
anchor_top = 0.8
anchor_right = 0.625
anchor_bottom = 1.0
margin_left = 0.199997
theme = ExtResource( 5 )
readonly = true

[node name="Debug_TEdit" type="TextEdit" parent="."]
anchor_left = 0.625
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 5 )
readonly = true
